--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,5 +130,6 @@ importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
 importFrom(utils,data)
