--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(transform_dep_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_tb_to_mdl_inp)
 export(write_all_alg_outps)
+export(write_box_cox_tfmn)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
 export(write_mdl_plts)
@@ -50,6 +51,7 @@ import(methods)
 importFrom(Boruta,Boruta)
 importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
+importFrom(MASS,boxcox)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
