--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9101
+Version: 0.0.0.9102
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -42,5 +42,38 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     testthat,
-    knitr
+    knitr,
+    ggfortify,
+    knitrBootstrap,
+    ready4fun (>= 0.0.0.9268),
+    ready4use (>= 0.0.0.9107),
+    assertthat,
+    boot,
+    Boruta,
+    brms,
+    caret,
+    dataverse,
+    dplyr,
+    grDevices,
+    Hmisc,
+    magrittr,
+    MASS,
+    methods,
+    psych,
+    purrr,
+    randomForest,
+    rlang,
+    stats,
+    stringi,
+    stringr,
+    synthpop,
+    tibble,
+    tidyr,
+    tidyselect,
+    utils
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
+Remotes: 
+    ready4-dev/ready4fun,
+    ready4-dev/ready4use
