--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9104
+Version: 0.0.0.9105
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -46,8 +46,9 @@ Imports:
     lifecycle,
     ggfortify,
     knitrBootstrap,
-    ready4fun (>= 0.0.0.9268),
+    ready4show (>= 0.0.0.9008),
     ready4use (>= 0.0.0.9107),
+    ready4fun (>= 0.0.0.9268),
     assertthat,
     boot,
     Boruta,
@@ -86,5 +87,6 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 Remotes: 
-    ready4-dev/ready4fun,
-    ready4-dev/ready4use
+    ready4-dev/ready4show,
+    ready4-dev/ready4use,
+    ready4-dev/ready4fun
