--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9106
+Version: 0.0.0.9107
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -48,6 +48,7 @@ Imports:
     knitrBootstrap,
     ready4show (>= 0.0.0.9009),
     ready4use (>= 0.0.0.9107),
+    ready4class (>= 0.0.0.9184),
     ready4fun (>= 0.0.0.9268),
     assertthat,
     boot,
@@ -89,4 +90,5 @@ Depends:
 Remotes: 
     ready4-dev/ready4show,
     ready4-dev/ready4use,
+    ready4-dev/ready4class,
     ready4-dev/ready4fun
