Rough draft of main TTU modelling vignete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,10 @@ export(calculate_aqol6d_dim_5_disv)
 export(calculate_aqol6d_dim_6_disv)
 export(calculate_dep_var_tfmn)
 export(calculate_rmse)
+export(calculate_rmse_tfmn)
 export(fit_clg_log_tfmn)
 export(fit_gsn_log_lnk)
+export(fit_ts_model_with_brm)
 export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
 export(get_signft_covars)
@@ -101,6 +103,7 @@ export(write_new_outp_dir)
 export(write_predr_cmprsn_outps)
 export(write_results_to_csv)
 export(write_shareable_mdls)
+export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
 export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
@@ -116,6 +119,7 @@ importFrom(Surrogate,RandVec)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
+importFrom(brms,brm)
 importFrom(caret,MAE)
 importFrom(caret,R2)
 importFrom(caret,RMSE)
@@ -138,6 +142,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
@@ -221,6 +226,7 @@ importFrom(simstudy,genObs)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,as.formula)
+importFrom(stats,gaussian)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,rnorm)
