Increment version number

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9110
+Version: 0.0.0.9111
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -48,6 +48,7 @@ Imports:
     knitrBootstrap,
     ready4show (>= 0.0.0.9012),
     ready4use (>= 0.0.0.9110),
+    dataverse (>= 0.3.0),
     ready4class (>= 0.0.0.9185),
     ready4fun (>= 0.0.0.9270),
     assertthat,
@@ -55,7 +56,6 @@ Imports:
     Boruta,
     brms,
     caret,
-    dataverse,
     dplyr,
     ggalt,
     ggplot2,
@@ -90,5 +90,6 @@ Depends:
 Remotes: 
     ready4-dev/ready4show,
     ready4-dev/ready4use,
+    iqss/dataverse-client-r,
     ready4-dev/ready4class,
     ready4-dev/ready4fun
