--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,11 @@
 
 export("%>%")
 export(TTU_predictors_lup)
-export(add_adol6d_scores)
-export(add_aqol6dU_to_aqol6d_items_tb)
-export(add_aqol6dU_to_aqol6d_tbs_ls)
-export(add_aqol6d_adol_dim_scrg_eqs)
-export(add_aqol6d_items_to_aqol6d_tbs_ls)
 export(add_cors_and_uts_to_aqol6d_tbs_ls)
-export(add_dim_disv_to_aqol6d_items_tb)
-export(add_dim_scores_to_aqol6d_items_tb)
-export(add_itm_disv_to_aqol6d_itms_tb)
+export(add_interval_var)
 export(add_labels_to_aqol6d_tb)
 export(add_uids_to_tbs_ls)
-export(add_unwtd_dim_tots)
 export(add_utility_predn_to_ds)
-export(add_wtd_dim_tots)
 export(calculate_adol_aqol6dU)
 export(calculate_adult_aqol6dU)
 export(calculate_aqol6d_dim_1_disv)
@@ -33,11 +24,8 @@ export(fit_ts_model_with_brm)
 export(force_min_max_and_int_cnstrs)
 export(force_vec_to_sum_to_int)
 export(get_signft_covars)
-export(impute_adult_aqol6d_items_tb)
-export(impute_unscrd_adol_aqol6d_ds)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
-export(make_adol_aqol6d_disv_lup)
 export(make_aqol6d_adol_pop_tbs_ls)
 export(make_aqol6d_fns_ls)
 export(make_aqol6d_items_tb)
@@ -87,7 +75,6 @@ export(transform_dep_var_nm)
 export(transform_dep_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_ds_for_tstng)
-export(transform_raw_aqol_tb_to_aqol6d_tb)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
@@ -95,11 +82,15 @@ export(write_all_alg_outps)
 export(write_box_cox_tfmn)
 export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
+export(write_mdl_cmprsns)
 export(write_mdl_plts)
 export(write_mdl_type_covars_mdls)
 export(write_mdl_type_multi_outps)
 export(write_mdl_type_sngl_outps)
+export(write_mdls_with_covars_cmprsns)
 export(write_new_outp_dir)
+export(write_predr_and_covars_cmprsns)
+export(write_predr_and_mdl_tstng_results)
 export(write_predr_cmprsn_outps)
 export(write_results_to_csv)
 export(write_shareable_mdls)
@@ -130,7 +121,6 @@ importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
-importFrom(dplyr,contains)
 importFrom(dplyr,desc)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
@@ -138,24 +128,19 @@ importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
-importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
-importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
-importFrom(dplyr,vars)
 importFrom(ggalt,geom_bkde)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
@@ -176,10 +161,10 @@ importFrom(grDevices,png)
 importFrom(hutils,longest_prefix)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
+importFrom(lubridate,interval)
+importFrom(lubridate,time_length)
 importFrom(magrittr,"%>%")
 importFrom(matrixcalc,is.positive.definite)
-importFrom(mice,complete)
-importFrom(mice,mice)
 importFrom(pacman,p_load)
 importFrom(psych,cor.smooth)
 importFrom(psych,describe)
@@ -214,13 +199,10 @@ importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4use,get_fl_id_from_dv_ls)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
-importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
-importFrom(simstudy,defData)
 importFrom(simstudy,defMiss)
 importFrom(simstudy,genCorData)
-importFrom(simstudy,genData)
 importFrom(simstudy,genMiss)
 importFrom(simstudy,genObs)
 importFrom(stats,AIC)
@@ -245,7 +227,6 @@ importFrom(synthpop,syn)
 importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
-importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
