--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,9 +25,12 @@ reference:
   - TTU_predictors_lup
 - title: "Functions"
 - contents:
-  - add_adol6d_scores
+  - add_interval_var
   - add_utility_predn_to_ds
   - make_fake_ts_data
   - write_all_alg_outps
+  - write_mdl_cmprsns
+  - write_mdls_with_covars_cmprsns
+  - write_predr_and_covars_cmprsns
   - write_shareable_mdls
   - write_ts_mdls_from_alg_outp
