migrated in fn and ds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(transform_dep_var_nm)
 export(transform_dep_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_ds_for_tstng)
+export(transform_mdl_vars_with_clss)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
