--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,9 @@
+home:
+  links:
+  - text: User manual (PDF)
+    href: https://github.com/ready4-dev/TTU/files/6277705/TTU_user_0.0.0.9133.pdf
+  - text: Developer version of usual manual (PDF)
+    href: https://github.com/ready4-dev/TTU/files/6277710/TTU_developer_0.0.0.9133.pdf
 development:
   mode: auto
 reference:
