--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,6 @@
 
 export("%>%")
 export(TTU_predictors_lup)
-export(add_cors_and_utls_to_aqol6d_tbs_ls)
-export(add_interval_var)
-export(add_labels_to_aqol6d_tb)
 export(add_uids_to_tbs_ls)
 export(add_utility_predn_to_ds)
 export(calculate_dpnt_var_tfmn)
@@ -18,25 +15,16 @@ export(force_vec_to_sum_to_int)
 export(get_signft_covars)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
-export(make_aqol6d_adol_pop_tbs_ls)
-export(make_aqol6d_fns_ls)
-export(make_aqol6d_items_tb)
+export(make_analysis_ds_smry_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
-export(make_complete_prpns_tbs_ls)
-export(make_correlated_data_tb)
-export(make_corstars_tbl_xx)
-export(make_dim_sclg_cons_dbl)
-export(make_domain_items_ls)
 export(make_fake_ts_data)
 export(make_folds_ls)
 export(make_knit_pars_ls)
-export(make_make_item_wrst_wts_ls_ls)
 export(make_mdl)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
 export(make_new_TTU_predictors_lup)
-export(make_pdef_cor_mat_mat)
 export(make_predn_ds_with_one_predr)
 export(make_predr_vals)
 export(make_predr_vars_nms_ls)
@@ -46,9 +34,8 @@ export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl_outp)
 export(make_smry_of_ts_mdl_outp)
-export(make_synth_series_tbs_ls)
+export(make_tfmn_cmprsn_plt)
 export(make_unique_ls_elmt_idx_int)
-export(make_vec_with_sum_of_int_val)
 export(plot_auto_lm)
 export(plot_lnr_cmprsn)
 export(plot_obsd_predd_dnst)
@@ -66,16 +53,15 @@ export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
 export(transform_depnt_var_nm_for_cll)
 export(transform_ds_for_mdlng)
-export(transform_ds_for_tstng)
 export(transform_mdl_vars_with_clss)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
 export(write_all_alg_outps)
 export(write_box_cox_tfmn)
-export(write_brm_mdl_plt_fl)
 export(write_brm_model_plts)
 export(write_mdl_cmprsn)
+export(write_mdl_plt_fl)
 export(write_mdl_plts)
 export(write_mdl_type_covars_mdls)
 export(write_mdl_type_multi_outps)
@@ -93,13 +79,10 @@ export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
-importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,boxcox)
 importFrom(MASS,mvrnorm)
-importFrom(Matrix,forceSymmetric)
-importFrom(Surrogate,RandVec)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
@@ -122,21 +105,18 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_if)
-importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
-importFrom(dplyr,rename_all)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
-importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
 importFrom(ggalt,geom_bkde)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
@@ -153,12 +133,8 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
-importFrom(lubridate,interval)
-importFrom(lubridate,time_length)
 importFrom(magrittr,"%>%")
-importFrom(matrixcalc,is.positive.definite)
 importFrom(pacman,p_load)
-importFrom(psych,cor.smooth)
 importFrom(psych,describe)
 importFrom(psych,logit)
 importFrom(purrr,discard)
@@ -177,7 +153,6 @@ importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
-importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
@@ -193,7 +168,6 @@ importFrom(rlang,exec)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(simstudy,defMiss)
-importFrom(simstudy,genCorData)
 importFrom(simstudy,genMiss)
 importFrom(simstudy,genObs)
 importFrom(stats,AIC)
@@ -225,3 +199,4 @@ importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(viridis,scale_fill_viridis)
+importFrom(youthvars,transform_ds_for_tstng)
