migrated out make_plt_fl fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,23 +18,33 @@ export(knit_mdl_rprt)
 export(make_analysis_ds_smry_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
+export(make_cmpst_sctr_and_dnsty_plt)
 export(make_fake_ts_data)
 export(make_folds_ls)
+export(make_hlth_utl_and_predrs_ls)
 export(make_knit_pars_ls)
 export(make_mdl)
+export(make_mdl_coef_ratio_ls)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
+export(make_mdl_type_smry_tbl)
+export(make_mdls_ls)
+export(make_mdls_smry_tbls_ls)
 export(make_new_TTU_predictors_lup)
 export(make_predn_ds_with_one_predr)
 export(make_predr_vals)
 export(make_predr_vars_nms_ls)
+export(make_predrs_for_best_mdls)
 export(make_prefd_mdls_vec)
 export(make_pt_TTU_predictors_lup)
+export(make_ranked_predrs_ls)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl_outp)
 export(make_smry_of_ts_mdl_outp)
+export(make_sngl_mdl_smry_tb)
 export(make_tfmn_cmprsn_plt)
+export(make_two_mdl_types_smry_tbl)
 export(make_unique_ls_elmt_idx_int)
 export(plot_auto_lm)
 export(plot_lnr_cmprsn)
@@ -49,11 +59,13 @@ export(reorder_cndt_predrs_chr)
 export(reorder_tbs_for_target_cors)
 export(replace_with_missing_vals)
 export(scramble_xx)
+export(transform_chr_digit_pairs)
 export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
 export(transform_depnt_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_mdl_vars_with_clss)
+export(transform_predr_nm_part_of_phrases)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
@@ -61,7 +73,6 @@ export(write_all_alg_outps)
 export(write_box_cox_tfmn)
 export(write_brm_model_plts)
 export(write_mdl_cmprsn)
-export(write_mdl_plt_fl)
 export(write_mdl_plts)
 export(write_mdl_type_covars_mdls)
 export(write_mdl_type_multi_outps)
@@ -79,6 +90,7 @@ export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
+importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,boxcox)
@@ -91,6 +103,9 @@ importFrom(caret,MAE)
 importFrom(caret,R2)
 importFrom(caret,RMSE)
 importFrom(caret,createFolds)
+importFrom(cowplot,draw_image)
+importFrom(cowplot,ggdraw)
+importFrom(cowplot,plot_grid)
 importFrom(dataverse,get_dataset)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -107,6 +122,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
@@ -129,8 +145,6 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
-importFrom(grDevices,dev.off)
-importFrom(grDevices,png)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
 importFrom(magrittr,"%>%")
@@ -153,6 +167,7 @@ importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
@@ -162,6 +177,7 @@ importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
+importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
@@ -185,6 +201,7 @@ importFrom(stringi,stri_locate_last_fixed)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_locate)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
