reattempt after deploy fail

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,8 @@ home:
     href: https://github.com/ready4-dev/TTU/files/6277710/TTU_developer_0.0.0.9133.pdf
   - text: Project website
     href: https://www.ready4-dev.com/
+  - text: Project website
+    href: https://www.ready4-dev.com/
 development:
   mode: auto
 reference:
