updated mdls_rprt tmpl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(write_results_to_csv)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
+export(write_to_delete_mdl_fls)
 export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
