added write report fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(write_new_outp_dir)
 export(write_predr_and_covars_cmprsn)
 export(write_predr_and_mdl_tstng_results)
 export(write_predr_cmprsn_outps)
+export(write_report)
 export(write_results_to_csv)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
@@ -146,6 +147,8 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
+importFrom(here,here)
+importFrom(here,i_am)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
 importFrom(magrittr,"%>%")
@@ -178,7 +181,9 @@ importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
+importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,write_mdl_plt_fl)
+importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
