--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(write_predr_and_mdl_tstng_results)
 export(write_predr_cmprsn_outps)
 export(write_report)
 export(write_results_to_csv)
+export(write_rprt_with_rcrd)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
