added fns for suppl analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,9 @@ export(transform_depnt_var_nm)
 export(transform_depnt_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_mdl_vars_with_clss)
+export(transform_paths_ls_for_scndry)
 export(transform_predr_nm_part_of_phrases)
+export(transform_rprt_lup)
 export(transform_tb_to_mdl_inp)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
@@ -85,6 +87,8 @@ export(write_predr_cmprsn_outps)
 export(write_report)
 export(write_results_to_csv)
 export(write_rprt_with_rcrd)
+export(write_scndry_analysis)
+export(write_scndry_analysis_dir)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
