--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(validate_TTU_predictors_lup)
 export(write_all_alg_outps)
 export(write_box_cox_tfmn)
 export(write_brm_model_plts)
+export(write_main_oupt_dir)
 export(write_mdl_cmprsn)
 export(write_mdl_plts)
 export(write_mdl_type_covars_mdls)
@@ -186,6 +187,7 @@ importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
+importFrom(ready4show,make_paths_ls)
 importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
@@ -228,3 +230,4 @@ importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(viridis,scale_fill_viridis)
 importFrom(youthvars,transform_ds_for_tstng)
+importFrom(youthvars,write_all_outp_dirs)
