migrated rmds from aqol analysis

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -80,3 +80,43 @@
 ^data-raw/extra_abbrs\.txt$
 ^data-raw/vignettes/Fake_Data_Generator\.Rmd$
 ^data-raw/inst/Markdown/Report_TS_Mdls\.Rmd$
+^data-raw/inst/Markdown/_Add_DV_Details\.Rmd$
+^data-raw/inst/Markdown/_Add_Lbls_To_Ds\.Rmd$
+^data-raw/inst/Markdown/_Add_Utility_Scores\.Rmd$
+^data-raw/inst/Markdown/_Get_Outp_Smry\.Rmd$
+^data-raw/inst/Markdown/_Import_And_Tf_Ds\.Rmd$
+^data-raw/inst/Markdown/_Import_Data\.Rmd$
+^data-raw/inst/Markdown/_Make_Descvs_Ds_Smry\.Rmd$
+^data-raw/inst/Markdown/_Make_Ds_Smry\.Rmd$
+^data-raw/inst/Markdown/_Make_Fake_Wide_DS\.Rmd$
+^data-raw/inst/Markdown/_Make_Functions\.Rmd$
+^data-raw/inst/Markdown/_Make_Mdl_Smry\.Rmd$
+^data-raw/inst/Markdown/_Make_Raw_Synthetic_Pop\.Rmd$
+^data-raw/inst/Markdown/_Make_Suplry_Mdls\.Rmd$
+^data-raw/inst/Markdown/_Make_Ws\.Rmd$
+^data-raw/inst/Markdown/_Purge_Data\.Rmd$
+^data-raw/inst/Markdown/_Set_Up_For_Reproducibility\.Rmd$
+^data-raw/inst/Markdown/_Set_Up_WS\.Rmd$
+^data-raw/inst/Markdown/_Share_Mdls\.Rmd$
+^data-raw/inst/Markdown/_Share_Report\.Rmd$
+^data-raw/inst/Markdown/_Specify_Scdry_Params\.Rmd$
+^data-raw/inst/Markdown/_Test_Data_Integrity\.Rmd$
+^data-raw/inst/Markdown/_Transform_Ds_For_Analysis\.Rmd$
+^data-raw/inst/Markdown/_Write_Analysis_Mthd_Smry\.Rmd$
+^data-raw/inst/Markdown/_Write_Cndt_Mdls_Tests\.Rmd$
+^data-raw/inst/Markdown/_Write_Cndt_Mdls_Tests_Long\.Rmd$
+^data-raw/inst/Markdown/_Write_Descriptives\.Rmd$
+^data-raw/inst/Markdown/_Write_Inputs_For_Main_Analysis\.Rmd$
+^data-raw/inst/Markdown/_Write_Main_Analysis\.Rmd$
+^data-raw/inst/Markdown/_Write_Report\.Rmd$
+^data-raw/inst/Markdown/_Write_Shareable_Data\.Rmd$
+^data-raw/inst/Markdown/_Write_Shareable_Mdls\.Rmd$
+^data-raw/inst/Markdown/_Write_Suplry_Analysis\.Rmd$
+^data-raw/inst/Markdown/_Write_TS_Mdls\.Rmd$
+^data-raw/inst/Markdown/Analyse\.Rmd$
+^data-raw/inst/Markdown/Filters/author-info-blocks\.lua$
+^data-raw/inst/Markdown/Filters/pagebreaks\.lua$
+^data-raw/inst/Markdown/Filters/scholarly-metadata\.lua$
+^data-raw/inst/Markdown/Report\.Rmd$
+^data-raw/inst/Markdown/Share\.Rmd$
+^data-raw/inst/Markdown/Supplement\.Rmd$
