added make results ls fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(make_analysis_ds_smry_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
+export(make_cohort_ls)
 export(make_fake_ts_data)
 export(make_folds_ls)
 export(make_hlth_utl_and_predrs_ls)
@@ -31,6 +32,7 @@ export(make_mdl_type_smry_tbl)
 export(make_mdls_ls)
 export(make_mdls_smry_tbls_ls)
 export(make_new_TTU_predictors_lup)
+export(make_paths_to_ss_plts_ls)
 export(make_predn_ds_with_one_predr)
 export(make_predr_vals)
 export(make_predr_vars_nms_ls)
@@ -38,12 +40,16 @@ export(make_predrs_for_best_mdls)
 export(make_prefd_mdls_vec)
 export(make_pt_TTU_predictors_lup)
 export(make_ranked_predrs_ls)
+export(make_results_ls)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl_outp)
 export(make_smry_of_ts_mdl_outp)
 export(make_sngl_mdl_smry_tb)
+export(make_ss_tbls_ls)
+export(make_tfd_sngl_predr_mdls_tb)
 export(make_tfmn_cmprsn_plt)
+export(make_ttu_cs_ls)
 export(make_two_mdl_types_smry_tbl)
 export(make_unique_ls_elmt_idx_int)
 export(plot_auto_lm)
@@ -114,6 +120,7 @@ importFrom(caret,createFolds)
 importFrom(cowplot,draw_image)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
+importFrom(cowplot,save_plot)
 importFrom(dataverse,get_dataset)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -215,6 +222,7 @@ importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
