added tfmn fn to round tbl vars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(transform_paths_ls_for_scndry)
 export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
 export(transform_tb_to_mdl_inp)
+export(transform_tbl_to_rnd_vars)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
 export(write_all_alg_outps)
