reworked make results ls fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,12 +41,14 @@ export(make_prefd_mdls_vec)
 export(make_pt_TTU_predictors_lup)
 export(make_ranked_predrs_ls)
 export(make_results_ls)
+export(make_results_ls_spine)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl_outp)
 export(make_smry_of_ts_mdl_outp)
 export(make_sngl_mdl_smry_tb)
 export(make_ss_tbls_ls)
+export(make_study_descs_ls)
 export(make_tfd_sngl_predr_mdls_tb)
 export(make_tfmn_cmprsn_plt)
 export(make_ttu_cs_ls)
@@ -110,6 +112,9 @@ importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,boxcox)
 importFrom(MASS,mvrnorm)
+importFrom(TTU,make_mdl_coef_ratio_ls)
+importFrom(TTU,make_mdls_ls)
+importFrom(TTU,make_mdls_smry_tbls_ls)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
