fixed purge ds copies fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(write_scndry_analysis_dir)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
+export(write_to_delete_ds_copies)
 export(write_to_delete_mdl_fls)
 export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
