added synthetich eq5d popl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
 export(make_cohort_ls)
+export(make_fake_eq5d_ds)
 export(make_fake_ts_data)
 export(make_folds_ls)
 export(make_hlth_utl_and_predrs_ls)
@@ -134,7 +135,9 @@ importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
@@ -144,6 +147,8 @@ importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
+importFrom(eq5d,eq5d)
+importFrom(faux,rnorm_pre)
 importFrom(ggalt,geom_bkde)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
@@ -190,6 +195,7 @@ importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
+importFrom(readxl,read_excel)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4show,make_paths_ls)
@@ -201,6 +207,7 @@ importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(sn,rsn)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,as.formula)
@@ -232,5 +239,7 @@ importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(viridis,scale_fill_viridis)
+importFrom(youthvars,replication_popl_tb)
 importFrom(youthvars,transform_ds_for_tstng)
+importFrom(youthvars,transform_raw_ds_for_analysis)
 importFrom(youthvars,write_all_outp_dirs)
