rename of predict utl from k10 fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr_cmprsn)
 export(plot_sctr_plt_cmprsn)
 export(predict_utility)
+export(predict_utl_from_k10)
 export(print_all_plts_for_mdl_set)
 export(print_ts_mdl_plts)
 export(randomise_changes_in_fct_levs)
