--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,6 +27,7 @@ reference:
   - fit_clg_log_tfmn
   - get_signft_covars
   - make_analysis_ds_smry_ls
+  - make_fake_eq5d_ds
   - make_fake_ts_data
   - make_mdl_nms_ls
   - make_predr_vals
