Increment version number

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9181
+Version: 0.0.0.9182
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -35,9 +35,61 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
+    assertthat,
+    boot,
+    Boruta,
+    brms,
+    caret,
+    cmdstanr (>= 0.4.0.9000),
+    cowplot,
+    dataverse (>= 0.3.8.9000),
+    dplyr,
+    eq5d,
+    faux,
+    ggalt,
+    ggfortify,
+    ggplot2,
+    here,
+    Hmisc,
     knitr,
+    knitrBootstrap,
     lifecycle,
-    testthat
+    magrittr,
+    MASS,
+    methods,
+    pacman,
+    psych,
+    purrr,
+    randomForest,
+    readr,
+    readxl,
+    ready4class (>= 0.0.0.9199),
+    ready4fun (>= 0.0.0.9298),
+    ready4show (>= 0.0.0.9033),
+    ready4use (>= 0.0.0.9132),
+    rlang,
+    sn,
+    stats,
+    stringi,
+    stringr,
+    synthpop,
+    testthat,
+    tibble,
+    tidyr,
+    tidyselect,
+    utils,
+    viridis,
+    youthvars (>= 0.0.0.9046)
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+Remotes: 
+    stan-dev/cmdstanr,
+    ready4-dev/ready4show,
+    ready4-dev/ready4use,
+    ready4-dev/youthvars,
+    iqss/dataverse-client-r,
+    ready4-dev/ready4class,
+    ready4-dev/ready4fun
+Suggests: 
+    rmarkdown
