--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
 export(make_cohort_ls)
+export(make_eq5d_ds_dict)
 export(make_fake_eq5d_ds)
 export(make_fake_ts_data)
 export(make_folds_ls)
@@ -37,6 +38,7 @@ export(make_predr_vals)
 export(make_predr_vars_nms_ls)
 export(make_predrs_for_best_mdls)
 export(make_prefd_mdls_vec)
+export(make_psych_predrs_lup)
 export(make_pt_TTU_predictors_lup)
 export(make_ranked_predrs_ls)
 export(make_results_ls)
@@ -204,6 +206,7 @@ importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
+importFrom(ready4use,make_pt_ready4_dictionary)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
@@ -240,6 +243,8 @@ importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(viridis,scale_fill_viridis)
+importFrom(youthvars,make_final_rpln_ds_dict)
+importFrom(youthvars,make_tfd_repln_ds_dict_r3)
 importFrom(youthvars,transform_ds_for_tstng)
 importFrom(youthvars,transform_raw_ds_for_analysis)
 importFrom(youthvars,write_all_outp_dirs)
