--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9186
+Version: 0.0.0.9187
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -54,6 +54,7 @@ Imports:
     knitr,
     knitrBootstrap,
     lifecycle,
+    lubridate,
     magrittr,
     MASS,
     methods,
