fixes for date of collection for fake data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,7 @@ importFrom(here,here)
 importFrom(here,i_am)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
+importFrom(lubridate,days)
 importFrom(magrittr,"%>%")
 importFrom(pacman,p_load)
 importFrom(psych,describe)
@@ -185,6 +186,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dbl)
 importFrom(purrr,map2_dfr)
+importFrom(purrr,map2_int)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
