--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,7 +200,6 @@ importFrom(purrr,reduce)
 importFrom(purrr,walk)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
-importFrom(readxl,read_excel)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4show,make_paths_ls)
@@ -239,6 +238,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,expand)
 importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
