more eq5d edits - possible reversing start arg changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ importFrom(psych,logit)
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
+importFrom(purrr,flatten_dfr)
 importFrom(purrr,flatten_int)
 importFrom(purrr,map)
 importFrom(purrr,map2)
