--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9201
+Version: 0.0.0.9202
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -45,6 +45,7 @@ Imports:
     cowplot,
     dataverse (>= 0.3.8.9000),
     dplyr,
+    enrichwith,
     eq5d,
     faux,
     ggalt,
