added method for betareg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,8 @@ importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
+importFrom(enrichwith,enrich)
+importFrom(enrichwith,get_simulate_function)
 importFrom(eq5d,eq5d)
 importFrom(faux,rnorm_pre)
 importFrom(ggalt,geom_bkde)
