--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,20 +18,25 @@ export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
 export(make_cohort_ls)
+export(make_ds_descvs_ls)
 export(make_eq5d_ds_dict)
 export(make_fake_eq5d_ds)
 export(make_fake_ts_data)
 export(make_folds_ls)
+export(make_header_yaml_args_ls)
 export(make_hlth_utl_and_predrs_ls)
 export(make_knit_pars_ls)
+export(make_maui_params_ls)
 export(make_mdl)
 export(make_mdl_coef_ratio_ls)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
+export(make_mdl_smry_ls)
 export(make_mdl_type_smry_tbl)
 export(make_mdls_ls)
 export(make_mdls_smry_tbls_ls)
 export(make_new_TTU_predictors_lup)
+export(make_path_params_ls)
 export(make_paths_to_ss_plts_ls)
 export(make_predn_ds_with_one_predr)
 export(make_predr_vals)
@@ -147,6 +152,7 @@ importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
@@ -235,6 +241,7 @@ importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
+importFrom(stringr,word)
 importFrom(synthpop,syn)
 importFrom(tibble,add_case)
 importFrom(tibble,as_tibble)
