ready to test on all eq5d pre manuscript

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(fit_ts_model_with_brm)
 export(get_signft_covars)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
+export(make_analysis_core_params_ls)
 export(make_analysis_ds_smry_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
@@ -36,6 +37,7 @@ export(make_mdl_type_smry_tbl)
 export(make_mdls_ls)
 export(make_mdls_smry_tbls_ls)
 export(make_new_TTU_predictors_lup)
+export(make_output_format_ls)
 export(make_path_params_ls)
 export(make_paths_to_ss_plts_ls)
 export(make_predn_ds_with_one_predr)
@@ -43,6 +45,7 @@ export(make_predr_vals)
 export(make_predr_vars_nms_ls)
 export(make_predrs_for_best_mdls)
 export(make_prefd_mdls_vec)
+export(make_prmry_analysis_params_ls)
 export(make_psych_predrs_lup)
 export(make_pt_TTU_predictors_lup)
 export(make_ranked_predrs_ls)
@@ -92,6 +95,7 @@ export(write_brm_model_plts)
 export(write_main_oupt_dir)
 export(write_mdl_cmprsn)
 export(write_mdl_plts)
+export(write_mdl_smry_rprt)
 export(write_mdl_type_covars_mdls)
 export(write_mdl_type_multi_outps)
 export(write_mdl_type_sngl_outps)
@@ -107,6 +111,7 @@ export(write_scndry_analysis_dir)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
+export(write_study_outp_ds)
 export(write_to_delete_ds_copies)
 export(write_to_delete_mdl_fls)
 export(write_ts_mdls)
@@ -118,6 +123,10 @@ importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,boxcox)
 importFrom(MASS,mvrnorm)
+importFrom(TTU,rprt_lup)
+importFrom(TTU,transform_paths_ls_for_scndry)
+importFrom(TTU,transform_rprt_lup)
+importFrom(TTU,write_report)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
