changed problem ready4show ref

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,7 +217,7 @@ importFrom(randomForest,varImpPlot)
 importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4show,make_paths_ls)
-importFrom(ready4show,rprt_lup)
+importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
