add validation of params for report creation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(make_tfmn_cmprsn_plt)
 export(make_ttu_cs_ls)
 export(make_two_mdl_types_smry_tbl)
 export(make_unique_ls_elmt_idx_int)
+export(make_valid_params_ls_ls)
 export(plot_auto_lm)
 export(plot_lnr_cmprsn)
 export(plot_obsd_predd_dnst)
@@ -82,6 +83,8 @@ export(transform_depnt_var_nm)
 export(transform_depnt_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_mdl_vars_with_clss)
+export(transform_params_ls_from_lup)
+export(transform_params_ls_to_valid)
 export(transform_paths_ls_for_scndry)
 export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
@@ -238,6 +241,8 @@ importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,simulate)
 importFrom(stringi,stri_locate_last_fixed)
+importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringi,stri_replace_last_fixed)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_locate)
