--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(add_utility_predn_to_ds)
 export(calculate_dpnt_var_tfmn)
 export(calculate_rmse)
 export(fit_ts_model_with_brm)
+export(get_cndts_for_mxd_mdls)
 export(get_link_from_tfmn)
 export(get_signft_covars)
 export(is_TTU_predictors_lup)
@@ -70,6 +71,7 @@ export(plot_lnr_cmprsn)
 export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr_cmprsn)
 export(plot_sctr_plt_cmprsn)
+export(predict_uncnstrd_utl)
 export(predict_utility)
 export(predict_utl_from_k10)
 export(print_all_plts_for_mdl_set)
@@ -81,12 +83,12 @@ export(scramble_xx)
 export(transform_chr_digit_pairs)
 export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
-export(transform_depnt_var_nm_for_cll)
 export(transform_ds_for_mdlng)
 export(transform_mdl_vars_with_clss)
 export(transform_params_ls_from_lup)
 export(transform_params_ls_to_valid)
 export(transform_paths_ls_for_scndry)
+export(transform_predd_var_nm)
 export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
 export(transform_tb_to_mdl_inp)
