Increment version number

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9221
+Version: 0.0.0.9222
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -78,6 +78,7 @@ Imports:
     tibble,
     tidyr,
     tidyselect,
+    TTU,
     utils,
     viridis,
     youthvars (>= 0.0.0.9053)
