edits to write shareable mdls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ importFrom(Hmisc,latexTranslate)
 importFrom(Hmisc,rcorr)
 importFrom(MASS,boxcox)
 importFrom(MASS,mvrnorm)
+importFrom(TTU,get_cndts_for_mxd_mdls)
 importFrom(assertthat,assert_that)
 importFrom(boot,inv.logit)
 importFrom(brms,bayes_R2)
