--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,3 @@
-home:
-  links:
-  - text: User manual (PDF)
-    href: https://github.com/ready4-dev/TTU/files/6277705/TTU_user_0.0.0.9133.pdf
-  - text: Developer version of usual manual (PDF)
-    href: https://github.com/ready4-dev/TTU/files/6277710/TTU_developer_0.0.0.9133.pdf
-  - text: Project website
-    href: https://www.ready4-dev.com/
 development:
   mode: auto
 reference:
@@ -24,6 +16,7 @@ reference:
 - title: "Functions"
 - contents:
   - add_utility_predn_to_ds
+  - get_cndts_for_mxd_mdls
   - get_signft_covars
   - make_analysis_ds_smry_ls
   - make_fake_eq5d_ds
