updated RMDs for template report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(make_knit_pars_ls)
 export(make_maui_params_ls)
 export(make_mdl)
 export(make_mdl_coef_ratio_ls)
+export(make_mdl_desc_lines)
 export(make_mdl_nms_ls)
 export(make_mdl_smry_elmt_tbl)
 export(make_mdl_smry_ls)
