work on prediction with mdls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(calculate_rmse)
 export(fit_ts_model_with_brm)
 export(get_cndts_for_mxd_mdls)
 export(get_link_from_tfmn)
+export(get_random_intercept)
 export(get_signft_covars)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
