--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ export(write_report)
 export(write_rprt_with_rcrd)
 export(write_scndry_analysis)
 export(write_scndry_analysis_dir)
+export(write_shareable_dir)
 export(write_shareable_mdls)
 export(write_shareable_mdls_to_dv)
 export(write_sngl_predr_multi_mdls_outps)
